[gd_scene load_steps=2 format=3 uid="uid://bn1sfd1m0cre4"]

[ext_resource type="Script" path="res://scripts/ui/cutscene_message_area.gd" id="1_y8ffg"]

[node name="CutsceneMessageArea" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_y8ffg")

[node name="SpeakerLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 250.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 36
text = "Speaker"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CutsceneMessage" type="Label" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 50.0
offset_right = 1500.0
offset_bottom = 300.0
text = "This is a long message that I need to have test different things and it needs to be long because I want to test the auto-wrap and this is really boring and I need to see the autowrap and this is born and even then I need to see"
autowrap_mode = 2

[node name="PreviousMessagesButton" type="Button" parent="."]
layout_mode = 0
offset_top = 300.0
offset_right = 300.0
offset_bottom = 350.0
text = "Previous Messages"

[node name="AdvanceTextButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1300.0
offset_top = 300.0
offset_right = 1600.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 24
text = "Next"

[connection signal="pressed" from="AdvanceTextButton" to="." method="_on_advance_text_button_pressed"]
